@@ -8,6 +8,8 @@ Version 0.7.2 -- Subversion
 * Changed with of add and edit html blob pages
 * Fixed stupid encoding issue with cms_htmlentities
 * Fixed htmlarea not loading due to a notice level error (#0000034)
+* Fixed a few problems with htmlarea's fullscreen not working in Internet Explorer
+* Added search and replace to htmlarea
 
 Version 0.7.1 -- Wed Oct 26 2004
 -----------------
